--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="static/css/style.css" />
     <title>Javascript</title>
 </head>
+
 <body>
-    
-
-
-    <script src="home.js"></script>
+    <div class="container-1">
+        <h2>Challenge 1: Yout Age in Days</h2>
+        <div class="flex-box-container-1">
+            <div>
+                <button class="btn btn-primary">Click me</button>
+            </div>
+            <div>
+                <button class="btn btn-danger">reset</button>
+            </div>
+        </div>
+        <div class="flex-box-container-1">
+            <div id="flex-box-result">
+                
+            </div>
+        </div>
+    </div>
+    <script src="static/js/script.js"></script>
 </body>
+
 </html>
