--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2>Challenge 1: Yout Age in Days</h2>
         <div class="flex-box-container-1">
             <div>
-                <button class="btn btn-primary">Click me</button>
+                <button class="btn btn-primary" onclick="ageInDays()">Click me</button>
             </div>
             <div>
                 <button class="btn btn-danger">reset</button>
