challenge 2: cat generator

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
             </div>
         </div>
     </div>
+    <div class="container-2 mt-5">
+        <h2>Challenge 2: Cat Generator</h2>
+        <button class="btn btn-success" id="cat-generator" onclick="generateCat()">Generate cat</button>
+        <div class="flex-box-container-2" id="flex-cat-gen">
+            <img src="" alt="">
+        </div>
+    </div>
     <script src="static/js/script.js"></script>
 </body>
 
