--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
             <img src="" alt="">
         </div>
     </div>
+    <div class="container-3 mt-5">
+        <h2>Challenge 3: Rock paper scissors</h2>
+        <div class="flex-box-rps" id="flex-box-rps-div">
+            <img id="rock" src="https://unsplash.com/photos/brown-and-gray-stone-fragment-9kRjMMLSPqw" height="150" width="150" alt="" onclick="rpsGame(this)">
+            <img id="paper" src="https://unsplash.com/photos/white-paper-on-white-textile-GmNTYBH9DUE" height="150" width="150"  alt="">
+            <img id="scissors" src="https://unsplash.com/photos/gray-steel-scissors-SmocKx2oDZc" height="150" width="150"  alt="">
+        </div>
+    </div>
     <script src="static/js/script.js"></script>
 </body>
 
