--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <h2>Challenge 3: Rock paper scissors</h2>
         <div class="flex-box-rps" id="flex-box-rps-div">
             <img id="rock" src="static/images/rock.jpg" height="150" width="150" alt="" onclick="rpsGame(this)">
-            <img id="paper" src="static/images/paper.jpg" height="150" width="150"  alt="">
-            <img id="scissors" src="static/images/scissors.jpg" height="150" width="150"  alt="">
+            <img id="paper" src="static/images/paper.jpg" height="150" width="150"  alt="" onclick="rpsGame(this)">
+            <img id="scissors" src="static/images/scissors.jpg" height="150" width="150"  alt="" onclick="rpsGame(this)">
         </div>
     </div>
     <script src="static/js/script.js"></script>
