--- a/index.html
+++ b/index.html
@@ -2,68 +2,109 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="static/css/style.css" />
-  <title>Javascript</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="static/css/style.css" />
+    <title>Javascript</title>
 </head>
 
 <body>
-  <div class="container-1 mt-5">
-    <h2>Challenge 1: Your Age in Days</h2>
-    <div class="flex-box-container-1">
-      <div>
-        <button class="btn btn-primary" onclick="ageInDays()">
-          Click me
+    <div class="container-1 mt-5">
+        <h2>Challenge 1: Your Age in Days</h2>
+        <div class="flex-box-container-1">
+            <div>
+                <button class="btn btn-primary" onclick="ageInDays()">
+                    Click me
+                </button>
+            </div>
+            <div>
+                <button class="btn btn-danger" onclick="reset()">reset</button>
+            </div>
+        </div>
+        <div class="flex-box-container-1">
+            <div id="flex-box-result"></div>
+        </div>
+    </div>
+    <div class="container-2 mt-5">
+        <h2>Challenge 2: Cat Generator</h2>
+        <button class="btn btn-success" id="cat-generator" onclick="generateCat()">
+            Generate cat
         </button>
-      </div>
-      <div>
-        <button class="btn btn-danger" onclick="reset()">reset</button>
-      </div>
+        <div class="flex-box-container-2" id="flex-cat-gen">
+            <img src="" alt="" />
+        </div>
     </div>
-    <div class="flex-box-container-1">
-      <div id="flex-box-result"></div>
+    <div class="container-3 mt-5">
+        <h2>Challenge 3: Rock paper scissors</h2>
+        <div class="flex-box-rps" id="flex-box-rps-div">
+            <img id="rock" src="static/images/rock.jpg" height="150" width="150" alt="" onclick="rpsGame(this)" />
+            <img id="paper" src="static/images/paper.jpg" height="150" width="150" alt="" onclick="rpsGame(this)" />
+            <img id="scissors" src="static/images/scissors.jpg" height="150" width="150" alt=""
+                onclick="rpsGame(this)" />
+        </div>
+        <div class="mb-3">
+            <button class="btn btn-warning " id="play-again-btn" onclick="resetGame()">Play again</button>
+        </div>
     </div>
-  </div>
-  <div class="container-2 mt-5">
-    <h2>Challenge 2: Cat Generator</h2>
-    <button class="btn btn-success" id="cat-generator" onclick="generateCat()">
-      Generate cat
-    </button>
-    <div class="flex-box-container-2" id="flex-cat-gen">
-      <img src="" alt="" />
+    <div class="container-4 mt-5">
+        <h2 id="change-my-color">Challenge 4: Button color change</h2>
+        <div class="flex-box-pick-color">
+            <form action="">
+                <select name="color-choices" id="background" onchange="buttonColorChange(this)">
+                    <option value="random">Random</option>
+                    <option value="red">Red</option>
+                    <option value="green">Green</option>
+                    <option value="reset">Reset</option>
+                </select>
+            </form>
+            <button class="btn btn-primary">Wee!</button>
+            <button class="btn btn-danger">Yahoo!</button>
+            <button class="btn btn-warning">Google!</button>
+            <button class="btn btn-success">Facebook!</button>
+        </div>
     </div>
-  </div>
-  <div class="container-3 mt-5">
-    <h2>Challenge 3: Rock paper scissors</h2>
-    <div class="flex-box-rps" id="flex-box-rps-div">
-      <img id="rock" src="static/images/rock.jpg" height="150" width="150" alt="" onclick="rpsGame(this)" />
-      <img id="paper" src="static/images/paper.jpg" height="150" width="150" alt="" onclick="rpsGame(this)" />
-      <img id="scissors" src="static/images/scissors.jpg" height="150" width="150" alt="" onclick="rpsGame(this)" />
+
+    <div class="container-5 mt-5">
+        <h2>Challenge 5: Blackjack</h2>
+        <h3><span id="blackjack-result">Let's Play!</span></h3>
+
+        <div class="flex-blackjack-row-1">
+            <div class="your-box">
+                <h2>You: <span id="your-blackjack-result">0</span></h2>
+            </div>
+            <div class="dealer-box">
+                <h2>Dealer: <span id="dealer-blackjack-result">0</span></h2>
+            </div>
+        </div>
+
+        <div class="flex-blackjack-row-2">
+            <div>
+                <button class="btn btn-lg btn-primary mr-2" id="blackjack-hit-button">Hit</button>
+                <button class=" btn btn-lg btn-warning mr-2" id="blackjack-stand-button">Stand</button>
+                <button class=" btn btn-lg btn-danger" id="blackjack-deal-button">Deal</button>
+            </div>
+        </div>
+
+        <div class="flex-blackjack-row-3">
+            <table>
+                <tr>
+                    <th>Wins</th>
+                    <th>Losses</th>
+                    <th>Draws</th>
+                </tr>
+                <tr>
+                    <td><span id="wins">0</span></td>
+                    <td><span id="losses">0</span></td>
+                    <td><span id="draws">0</span></td> 
+                </tr>
+            </table>
+        </div>
+
     </div>
-    <div class="mb-3">
-    <button class="btn btn-warning " id="play-again-btn" onclick="resetGame()">Play again</button>
-    </div>
-  </div>
-  <div class="container-3 mt-5">
-    <h2 id="change-my-color">Challenge 4: Button color change</h2>
-    <div class="flex-box-pick-color">
-      <form action="">
-        <select name="color-choices" id="background" onchange="buttonColorChange(this)">
-          <option value="random">Random</option>
-          <option value="red">Red</option>
-          <option value="green">Green</option>
-          <option value="reset">Reset</option>
-        </select>
-      </form>
-      <button class="btn btn-primary">Wee!</button>
-      <button class="btn btn-danger">Yahoo!</button>
-      <button class="btn btn-warning">Google!</button>
-      <button class="btn btn-success">Facebook!</button>
-    </div>
-  </div>
-  <script src="static/js/script.js"></script>
+
+    
+    <script src="static/js/script.js"></script>
 </body>
 
 </html>
