--- a/other/landscape.html
+++ b/other/landscape.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>javascript practice</title>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
 </head>
 
 <body>
@@ -16,18 +16,21 @@
         <form id="ageForm">
             <div>
                 <label for="age">Your Age:</label>
-                <input type="number" id="age" name="age" placeholder="Type your age">
+                <input type="number" id="age" name="age" placeholder="Type your age" required>
+                <input type="submit" value="Check">
             </div>
-            <div class="mt-3">
-                <input type="submit" value="Submit">
-            </div>
-    
-            <div class="results" id="results">
-            </div>
+            <div class="results  mt-3" id="results">
         </form>
-        
 
+        <div class="even-number mt-5">
+            <label for="even-num">Random Number:</label>
+            <input type="number" id="even-num" name="even-num" placeholder="Enter a number">
+            <input type="submit" value="Check" class="btn btn-sm btn-warning">
+        </div>
     </div>
+  
+
+   
 
 
     <script src="/static/js/conditionals.js"></script>
