--- a/other/landscape.html
+++ b/other/landscape.html
@@ -19,13 +19,16 @@
                 <input type="number" id="age" name="age" placeholder="Type your age" required>
                 <input type="submit" value="Check">
             </div>
-            <div class="results  mt-3" id="results">
+            <div class="results  mt-3" id="results"></div>
         </form>
 
         <div class="even-number mt-5">
+            <form id="myForm">
             <label for="even-num">Random Number:</label>
             <input type="number" id="even-num" name="even-num" placeholder="Enter a number">
             <input type="submit" value="Check" class="btn btn-sm btn-warning">
+            <div class="output mt-3" id="output"></div>
+            </form>
         </div>
     </div>
   
