--- a/other/landscape.html
+++ b/other/landscape.html
@@ -1,42 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>javascript practice</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="/static/css/style.css" />
+  </head>
 
-<body>
+  <body>
+    <div class="container-1 mt-5">
+      <h1>Conditionals:</h1>
 
-    <div class="container">
-        <h1>Conditionals:</h1>
-
-        <form id="ageForm">
-            <div>
-                <label for="age">Your Age:</label>
-                <input type="number" id="age" name="age" placeholder="Type your age" required>
-                <input type="submit" value="Check">
-            </div>
-            <div class="results  mt-3" id="results"></div>
-        </form>
-
-        <div class="even-number mt-5">
-            <form id="myForm">
-            <label for="even-num">Random Number:</label>
-            <input type="number" id="even-num" name="even-num" placeholder="Enter a number">
-            <input type="submit" value="Check" class="btn btn-sm btn-warning">
-            <div class="output mt-3" id="output"></div>
-            </form>
+      <form id="ageForm">
+        <div>
+          <label for="age">Your Age:</label>
+          <input
+            type="number"
+            id="age"
+            name="age"
+            placeholder="Type your age"
+            required
+          />
+          <input type="submit" value="Check" />
         </div>
+        <div class="results mt-3" id="results"></div>
+      </form>
+
+      <div class="even-number mt-5">
+        <form id="myForm">
+          <label for="even-num">Random Number:</label>
+          <input
+            type="number"
+            id="even-num"
+            name="even-num"
+            placeholder="Enter a number"
+          />
+          <input type="submit" value="Check" class="btn btn-sm btn-warning" />
+          <div class="output mt-3" id="output"></div>
+        </form>
+      </div>
     </div>
-  
-
-   
-
+    <div class="container-2 mt-3">
+      <h3>Check Your Grade:</h3>
+      <div>
+        <label for="score">Type your score:</label>
+        <input
+          type="number"
+          id="score"
+          name="score"
+          required
+          placeholder="What's your score?"
+        />
+        <button class="btn btn-sm btn-success" id="grades">Check Grade</button>
+      </div>
+      <div id="gradeResults"></div>
+    </div>
 
     <script src="/static/js/conditionals.js"></script>
-</body>
-
+  </body>
 </html>
