WIP: seasons form

--- a/other/landscape.html
+++ b/other/landscape.html
@@ -59,6 +59,20 @@
       </div>
       <div id="gradeResults"></div>
     </div>
+    <div class="container-3 mt-4">
+      <h3>Check Season</h3>
+      <form id="seasonForm">
+        <label for="seasons">Month:</label>
+        <input
+          type="text"
+          id="seasons"
+          name="seasons"
+          placeholder="Enter a Month"
+        />
+        <input type="submit" value="See Season" class="btn btn-sm btn-warning" />
+        <div class=" mt-3" id="seasonResult"></div>
+      </form>
+    </div>
 
     <script src="/static/js/conditionals.js"></script>
   </body>
