--- a/other/landscape.html
+++ b/other/landscape.html
@@ -59,6 +59,7 @@
       </div>
       <div id="gradeResults"></div>
     </div>
+
     <div class="container-3 mt-4">
       <h3>Check Season</h3>
       <form id="seasonForm">
@@ -69,8 +70,8 @@
           name="seasons"
           placeholder="Enter a Month"
         />
-        <input type="submit" value="See Season" class="btn btn-sm btn-warning" />
-        <div class=" mt-3" id="seasonResult"></div>
+        <input type="submit" onclick="checkSeason()" value="See Season" class="btn btn-sm btn-warning" />
+        <div class="mt-3" id="seasonResult"></div>
       </form>
     </div>
 
